
SVN
---

XML:   Resolved issue CASTOR-1499 using contribution from Emir Causevic [emircaus@bih.net.ba]
       Added support for named queries at the <class> level.
       Details: http://jira.codehaus.org/browse/CASTOR-1499
       (Werner - 20060818)

XML:   Resolved issue CASTOR-1495 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Moved successfull XML tests from Regression- to MasterTestSuite.
       Details: http://jira.codehaus.org/browse/CASTOR-1495
       (Ralf - 20060810)

All:   Resolved issue CASTOR-1488 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Refactored FieldDescriptor.
       Details: http://jira.codehaus.org/browse/CASTOR-1488
       (Ralf - 20060810)

Version 1.0.2, Aug 3, 2006
-------------------------------

JDO:   Resolved issue CASTOR-1487 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed bug in Castor's EHCache implementation.
       Details: http://jira.codehaus.org/browse/CASTOR-1487
       (Ralf - 20060803)

XML:   Resolved issue CASTOR-1477 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed problem to source code generator ignoring -nomarshall, -testable options.
       Details: http://jira.codehaus.org/browse/CASTOR-1477
       (Werner - 20060802)

XML:   Resolved issue CASTOR-1483 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed NullPointerException at generation of mapping.
       Details: http://jira.codehaus.org/browse/CASTOR-1483
       (Ralf - 20060801)

XML:   Fixed bug CASTOR-1482 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem related to MapItem class and namespaces
       Details: http://jira.codehaus.org/browse/CASTOR-1482
       (Werner - 20060801)

All:   Resolved issue CASTOR-1484 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]