@@ -2,6 +2,11 @@
 SVN
 ---
 
+All:   Resolved issue CASTOR-1500 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed problem with including all required class files in XML JAR.
+       Details: http://jira.codehaus.org/browse/CASTOR-1500
+       (Werner - 20060818)
+
 XML:   Resolved issue CASTOR-1499 using contribution from Emir Causevic [emircaus@bih.net.ba]
        Added support for named queries at the <class> level.
        Details: http://jira.codehaus.org/browse/CASTOR-1499
